<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017, Abhi Muktheeswarar
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context=".AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="56dp"
            android:layout_marginStart="56dp"
            android:gravity="center"
            app:srcCompat="@drawable/logo_about" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundAbout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_about"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="16dp"
                tools:text="@string/dummy_about_text" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/relative_facebook"
                        style="@style/ItemTouchHighlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:paddingBottom="12dp"
                        android:paddingTop="12dp">

                        <ImageView
                            android:id="@+id/icon_facebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            app:srcCompat="@drawable/ic_facebook" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@+id/icon_facebook"
                            android:padding="8dp"
                            android:text="@string/btn_follow_facebook"
                            android:textColor="@color/primaryText" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/divider_0"
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/dividerGrey" />

                    <RelativeLayout
                        android:id="@+id/relative_twitter"
                        style="@style/ItemTouchHighlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:paddingBottom="12dp"
                        android:paddingTop="12dp">

                        <ImageView
                            android:id="@+id/icon_twitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            app:srcCompat="@drawable/ic_twitter" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@+id/icon_twitter"
                            android:padding="8dp"
                            android:text="@string/btn_follow_twitter"
                            android:textColor="@color/primaryText" />
                    </RelativeLayout>


                    <View
                        android:id="@+id/divider_1"
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/dividerGrey" />

                    <RelativeLayout
                        android:id="@+id/relative_googlePlus"
                        style="@style/ItemTouchHighlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:paddingBottom="12dp"
                        android:paddingTop="12dp">

                        <ImageView
                            android:id="@+id/icon_googlePlus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            app:srcCompat="@drawable/ic_google_plus" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@+id/icon_googlePlus"
                            android:padding="8dp"
                            android:text="@string/btn_follow_googlePlus"
                            android:textColor="@color/primaryText" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/divider_2"
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/dividerGrey" />

                    <RelativeLayout
                        android:id="@+id/relative_terms"
                        style="@style/ItemTouchHighlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:paddingBottom="12dp"
                        android:paddingTop="12dp">

                        <ImageView
                            android:id="@+id/icon_terms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            app:srcCompat="@drawable/ic_description" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@+id/icon_terms"
                            android:padding="8dp"
                            android:text="@string/btn_terms_conditions"
                            android:textColor="@color/primaryText" />
                    </RelativeLayout>


                    <View
                        android:id="@+id/divider_3"
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/dividerGrey" />

                    <RelativeLayout
                        android:id="@+id/relative_version"
                        style="@style/ItemTouchHighlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:paddingBottom="12dp"
                        android:paddingTop="12dp">

                        <ImageView
                            android:id="@+id/icon_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            app:srcCompat="@drawable/ic_info_outline" />

                        <TextView
                            android:id="@+id/text_version"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@+id/icon_version"
                            android:padding="8dp"
                            android:textColor="@color/primaryText"
                            tools:text="1.0" />
                    </RelativeLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/text_footer"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textColor="@color/primaryText"
                tools:text="Made with love in Bengaluru" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
